-Added a new sound effect for drawing the old hunter's crossbow, and while using it the player's arm will now physically pull the arrow back
-Added some new sound effects for drawing and shooting slingshots
-Added a new orange summoner buff candy to the bag o' treats that gives you a temporary extra sentry slot
-Femur Fracturer homing skulls are now lauched forward in the same direction as the hammer was thrown instead of being created and then moving super slowly


Enemy & Boss Changes:

-Switched around big bone's skull wisp attacks, the yellow ones in phase 1 will now directly charge at you, while the orange ones in phase 2 are now flung around randomly
-Changed big bone's rose projectile attack, in phase 1 he will spawn a telegraph at your position and shoot all the roses at that spot, and in phase 2 the telegraph itself and the stream of roses will follow the player
-Big bone's skull wisp projectiles no longer make ghost screaming sounds when they die, and they now produce a gore version of themselves when they die (This will not damage you and is purely visual, and its also kinda funny)
-Big bone's charging speed is now a bit faster to make it more difficult to avoid in general
-Big bone's charge attack in phase 2 no longer creates fireballs when he hits a wall, but it will now predict your movement
-Tweaked and improved the visual effects on many of big bone's projectiles
-Daffodil's thorn ball projectile after-images are now red instead of green
-Added a custom sound for spooky spirit's charging attack and its own custom death sound, both made by Rockwizard5
-Spooky spirit now correctly displays that it is night-time only in its bestiary entry
-Added new telegraph sprites for orro & boro that actually point in the direction they will come from, as well as making multiple telegraphs spawn in a line instead of just one to make their attacks more understandable
-Orro & boro no longer draw behind tiles so you can see them coming if they are inside of tiles