@@ -18,8 +18,8 @@ namespace Spooky.Content.Items.SpiderCave
             Item.noMelee = true;
             Item.width = 34;
             Item.height = 38;
-            Item.useTime = 45;
-			Item.useAnimation = 45;
+            Item.useTime = 40;
+			Item.useAnimation = 40;
 			Item.useStyle = ItemUseStyleID.Shoot;
 			Item.knockBack = 3;
             Item.rare = ItemRarityID.LightRed;
