@@ -318,3 +318,5 @@ SpiderSlingshotWeb.DisplayName: Web Ball
 RazorRoseTelegraph.DisplayName: Telegraph
 RazorRoseTelegraphLockOn.DisplayName: Telegraph
 RazorRoseOrange.DisplayName: Razor Rose
+BoneBowProj.DisplayName: Bone Bender
+BoneBowArrow.DisplayName: Piercing Bone
